syntax = "proto3";
import "google/protobuf/empty.proto";

package proto;

option go_package = "github.com/MKKL1/schematic-app/server/internal/pkg/genproto";

service CategoryService {
  rpc CreateCategoryVars(CreateCategoryVarsParams) returns (google.protobuf.Empty) {}
  rpc GetCategVarsByPost(GetCategVarsByPostRequest) returns (CategVarsByPostResponse) {}
}

message CreateCategoryVarsParams {
  int64 post_id = 1;
  string category = 2;
  bytes values = 3;
}

message GetCategVarsByPostRequest {
  int64 post_id = 1;
}

message CategoryVars {
  int64 post_id = 1;
  string category = 2;
  bytes vars = 3;
}

message CategVarsByPostResponse {
  repeated CategoryVars items = 1;
}